updated stats